[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x402-langchain"
version = "0.1.0"
description = "LangChain tools for x402 Bazaar -- the AI agent API marketplace"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "x402 Bazaar", email = "x402bazaar@gmail.com"}]
keywords = ["x402", "langchain", "ai-agents", "api-marketplace", "usdc", "web3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.2.0",
    "requests>=2.31.0",
    "web3>=6.0.0",
]

[project.urls]
Homepage = "https://x402bazaar.org"
Repository = "https://github.com/Wintyx57/x402-langchain"
Documentation = "https://x402bazaar.org/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
